infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              # Set client port to 4222
              "-p",
              "4222",
              # Set management port to 8222
              "-m",
              "8222",
              # Set server heartbeat interval to 5 seconds
              "-hbi",
              "5s",
              # Set the heartbeat response wait time for the server to 5 seconds
              "-hbt",
              "5s",
              # Set the number of heartbeat fails before the server closes the connection to 2
              "-hbf",
              "2",
              # Enable STAN debugging output
              "-SD",
              # Set the cluser ID to 'ticketing'
              "-cid",
              "ticketing",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
